--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing : border-box;
+  }
+
 .App {
   text-align: center;
 }
@@ -19,4 +23,9 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+table, th, td {
+  border : 2px solid black;
+  background-color : lightblue;
 }
